--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
-        "vite": "^3.0.0"
+        "vite": "^3.0.4"
+    },
+    "dependencies": {
+        "prop-types": "^15.8.1"
     }
 }
