--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
         "vite": "^3.0.4"
     },
     "dependencies": {
-        "prop-types": "^15.8.1"
+        "flickity": "^3.0.0",
+        "i": "^0.3.7",
+        "npm": "^9.4.2",
+        "prop-types": "^15.8.1",
+        "react-flickity-component": "^4.0.1"
     }
 }
